Details
-
Bug
-
Resolution: Done
-
P2: Important
-
5.12
-
None
-
Android X86, clang
-
-
e379951162a02d3b5bde1de4a838cec6eb9ae58f (qt/qtdeclarative/dev)
Description
1041 test cases fail in tst_parserstress in QtDeclarative. Please see build/test logs below.
Coin build:
https://testresults.qt.io/coin/integration/qt/qt5/tasks/nightly_1550367792
Attachments
Issue Links
- is required for
-
QTBUG-73512 Fix qtdeclarative tests for android
-
- Closed
-
For Gerrit Dashboard: QTBUG-73572 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
259878,2 | Increase verbosity of Android deployment | master | qtqa/tqtc-coin-ci | Status: MERGED | +2 | 0 |
260523,2 | androiddeployqt: print qmlimportscanner command in verbose mode | 5.13 | qt/qtbase | Status: MERGED | +2 | 0 |
266235,4 | Fix deployment of QtQuick for Android in tst_parserstress | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |